<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"


    android:orientation="vertical">

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:text="@string/_1234"
        android:background="#efefef"
        android:textSize="48sp"
        android:padding="10dp"
        android:gravity="end|bottom"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buSeven"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_7"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            tools:ignore="NestedWeights">

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buEight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_8"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            >

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buNine"
            android:layout_width="0dp"
            android:text="@string/_9"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            >

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buDivide"
            android:layout_width="0dp"
            android:text="@string/_Divide"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            >

        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buFour"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_4"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            tools:ignore="NestedWeights">

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buFive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_5"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            >

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buSix"
            android:layout_width="0dp"
            android:text="@string/_6"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            >

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buMultiply"
            android:layout_width="0dp"
            android:text="@string/_Multiply"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            >

        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buOne"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_1"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            tools:ignore="NestedWeights">

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buTwo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            >

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buThree"
            android:layout_width="0dp"
            android:text="@string/_3"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            >

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buMinus"
            android:layout_width="0dp"
            android:text="@string/_Minus"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            >

        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buDot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_Dot"
            android:layout_height="match_parent"
            android:onClick="onDecimalPoint"
            tools:ignore="NestedWeights">

        </Button>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buZero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_0"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            tools:ignore="NestedWeights">

        </Button>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buCLR"
            android:layout_width="0dp"
            android:text="@string/_CLR"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:onClick="onClear"
            >

        </Button>
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buPlus"
            android:layout_width="0dp"
            android:text="@string/_Plus"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            >

        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buEquals"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_Equals"
            android:layout_height="match_parent"
            android:onClick="onEquals"
            tools:ignore="NestedWeights">

        </Button>


    </LinearLayout>

</LinearLayout>